--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: beige;
+  background-color: lightseagreen ;
   display: flex;
   justify-content: center;
   align-items: center;
